--- a/3 lab.html
+++ b/3 lab.html
@@ -75,5 +75,6 @@ console.log("\nZP Amina");
 console.log(getWorker1Salary()); 
 
 console.log("\nZP Saida"); 
-console.log(getWorker2Salary()); 
+console.log(getWorker2Salary());
+BiKHUR 
 </script>
